--- a/connection.properties
+++ b/connection.properties
@@ -1,3 +1,3 @@
-url=renature-sql-instance.cffylvuupdae.us-east-2.rds.amazonaws.com:1521:ORCL
+url=jdbc:oracle:thin:@renature-sql-instance.cffylvuupdae.us-east-2.rds.amazonaws.com:1521:ORCL
 user=ers
 password=thisisthepassword
